# FlowAR

./: .gitignore  create_val_split.py  engine.py  eval.py  eval.sh  main_flowar.py  pyproject.toml  requirements.txt  train_4gpu.sbatch  train_freeze_ar_small.sbatch  train_freeze_ar_small_2gpu.sbatch  train_freeze_ar_small_4gpu.sbatch  train_noscratch.sbatch  train_sb.sbatch  train_sb.sh  train_sb_refine.sh
models/: flowar.py  flowloss.py  flowmodel.py  sampler.py
util/: loader.py  misc.py
