[project]
name = "flowar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "numpy>=1.24,<2.0",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "timm==0.9.12",
    "einops>=0.7",
    "tqdm>=4.65",
    "tensorboard>=2.14",
    "wandb>=0.17",
    "lpips>=0.1.4",
    "torchmetrics>=1.3",
    "gdown>=5.2",
    "torch-fidelity @ git+https://github.com/LTH14/torch-fidelity.git@master",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux'"]
